--- a/esl_portal/esl_app/templates/esl_app/main.html
+++ b/esl_portal/esl_app/templates/esl_app/main.html
@@ -1,1 +1,11 @@
-{{time}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    <h1>О нас</h1>
+    <p>Описание нашего прокта</p>
+</body>
+</html>
