--- a/esl_portal/esl_app/templates/esl_app/some_test.html
+++ b/esl_portal/esl_app/templates/esl_app/some_test.html
@@ -1,8 +1,8 @@
 {% if some_test %}
     <h1>{{some_test.test_name}}</h1>
-    <ol>
-        {% for question in questions %}
-            <li>{{question.question_text}}</li>
-        {% endfor %}
-    </ol>
+    <h3>{{some_test.test_description}}</h3>
+    <h3>{{some_test.level}}</h3>
+    <h3>{{some_test.aspect}}</h3>
+    <h4>{{some_test.time_limit}} minutes</h4>
+    <button>Начать выполнение</button>
 {% endif %}
