--- a/esl_portal/esl_app/templates/esl_app/profile.html
+++ b/esl_portal/esl_app/templates/esl_app/profile.html
@@ -1,1 +1,26 @@
-{{time}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    {% if user %}
+        <div>
+            <div>
+                <h2>Юзернейм</h2>
+                <input type="text" value="{{user.username}}">
+            </div>
+            <div>
+                <h2>Почта</h2>
+                <input type="text" value="{{user.email}}">
+            </div>
+            <div>
+                <h2>Пароль</h2>
+                <input type="password">
+            </div>
+            <button>Изменить</button>
+        </div>
+    {% endif %}
+</body>
+</html>
