Added link to register

--- a/esl_portal/esl_app/templates/esl_app/login.html
+++ b/esl_portal/esl_app/templates/esl_app/login.html
@@ -13,5 +13,6 @@
         {{ form }}
         <input type="submit" value="Submit">
     </form>
+    <p>Ещё нет аккаунта? <a href={% url 'register' %}>Зарегистрируйтесь</a></p>
 </body>
 </html>
