--- a/esl_portal/esl_app/templates/esl_app/login.html
+++ b/esl_portal/esl_app/templates/esl_app/login.html
@@ -11,7 +11,7 @@
     <form method="post" action="{% url 'login' %}">
         {% csrf_token %}
         {{ form }}
-        <input type="submit" value="Submit">
+        <input type="submit" value="Войти">
     </form>
     <a href="{% url 'register' %}">
         <input type="button" value="Регистрация">
