--- a/esl_portal/esl_app/templates/esl_app/register.html
+++ b/esl_portal/esl_app/templates/esl_app/register.html
@@ -1,1 +1,8 @@
-{{time}}
+{% block content %}
+<h1>Создать аккаунт</h1>
+    <form action="{% url 'register' %}" method="post">
+        {% csrf_token %}
+        {{ user_form.as_p }}
+        <p><input type="submit" value="Создать"></p>
+    </form>
+{% endblock %}
