Сделал регистрацию и связал с авторизацией. Также сделал выход

--- a/esl_portal/esl_app/templates/esl_app/login.html
+++ b/esl_portal/esl_app/templates/esl_app/login.html
@@ -14,7 +14,7 @@
         <input type="submit" value="Войти">
     </form>
     <a href="{% url 'register' %}">
-        <input type="button" value="Регистрация">
+        <input type="submit" value="Регистрация">
     </a>
 </body>
 </html>
