--- a/esl_portal/esl_app/templates/esl_app/forgot.html
+++ b/esl_portal/esl_app/templates/esl_app/forgot.html
@@ -1,1 +1,17 @@
-{{time}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    {% if wrong_credentials %}
+        <p>Неверное имя пользователя и/или пароль</p>
+    {% endif %}
+    <form method="post" action={% url 'forgot' %}>
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value="Submit">
+    </form>
+</body>
+</html>
