--- a/esl_portal/esl_app/templates/esl_app/tests.html
+++ b/esl_portal/esl_app/templates/esl_app/tests.html
@@ -1,7 +1,7 @@
 {% if list %}
     <ul>
         {% for test in list %}
-            <li><a href="/test/{{test.id}}/">{{test.test_name}}</a></li>
+            <li><a href="/tests/{{test.id}}/">{{test.test_name}}</a></li>
         {% endfor %}
     </ul>
 {% else %}
