--- a/esl_portal/esl_app/templates/esl_app/tests.html
+++ b/esl_portal/esl_app/templates/esl_app/tests.html
@@ -1,12 +1,3 @@
-{#{% if list %}#}
-{#    <ul>#}
-{#        {% for test in list %}#}
-{#            <li><a href="/tests/{{test.id}}/">{{test.test_name}}</a></li>#}
-{#        {% endfor %}#}
-{#    </ul>#}
-{#{% else %}#}
-{#    <p>Нет тестов</p>#}
-{#{% endif %}#}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -65,6 +56,15 @@
                 <div class="about__text">Лингвистика</div>
             </div>
         </div>
+        {% if list %}
+            <ul>
+                {% for test in list %}
+                    <li><a href="/tests/{{test.id}}/">{{test.test_name}}</a></li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p>Нет тестов</p>
+        {% endif %}
 
     </div><!-- /.container -->
 </section>
