--- a/esl_portal/esl_app/templates/esl_app/main.html
+++ b/esl_portal/esl_app/templates/esl_app/main.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{% static 'esl_app/main_style.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
-    <title>ITIS</title>
+    <title>Main</title>
 </head>
 <body>
 <header class="header">
     <div class="container">
         <div class="header__inner">
-            <div class="header__logo">ITIS KFU UNIVERSITY</div>
+            <div class="header__logo"></div>
 
             <nav class="nav">
                 <a class="nav__link active" href="{% url 'tests' %}">Тесты</a>
@@ -40,11 +40,8 @@
         <div class="container">
             <div class="slider__inner">
                 <div class="slider__item ">
-                    О нас: Мы крутые!
                 </div>
                 <div class="slider__item">
-                    Контакты:
-                    github
                 </div>
             </div>
         </div>
