Check if test's been started

--- a/esl_portal/esl_app/templates/esl_app/some_test.html
+++ b/esl_portal/esl_app/templates/esl_app/some_test.html
@@ -1,16 +1,3 @@
-{#{% if some_test %}#}
-{#    <h1>{{some_test.test_name}}</h1>#}
-{#    <h3>{{some_test.test_description}}</h3>#}
-{#    <h3>{{some_test.level}}</h3>#}
-{#    <h3>{{some_test.aspect}}</h3>#}
-{#    <h4>{{some_test.time_limit}} minutes</h4>#}
-{#    <button id="start-button">Начать выполнение</button>#}
-{#{% endif %}#}
-{#{% block javascript %}#}
-{#    <script>#}
-{##}
-{#    </script>#}
-{#{% endblock %}#}
 <!DOCTYPE html>
 
 <html lang="en">
@@ -44,7 +31,11 @@
                 <h3>{{some_test.test_description}}</h3>
                 <h3>{{some_test.level}}</h3>
                 <h3>{{some_test.aspect}}</h3>
-                <button id="start-button">Начать выполнение</button>
+                {% if is_started %}
+                    <button id="resume-button">Продолжить выполнение</button>
+                {% else %}
+                    <button id="start-button">Начать выполнение</button>
+                {% endif %}
             {% endif %}
         </div>
         <div id="completion">
